fixed map overflow and added media

--- a/Map/map.css
+++ b/Map/map.css
@@ -1,9 +1,14 @@
 .item-a {
     grid-area: info;
+  
 }
 
 .item-b {
     grid-area: map;
+    min-width: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .item-c {
@@ -26,7 +31,25 @@ html, body {
     padding: 0;
 }
 
-body {
+
+@media screen and (max-width: 768px) {
+    body {
+        display: grid;
+        grid-template-areas:
+            "navbar"
+            "info"
+            "map";
+        grid-template-rows: auto 1fr auto;
+        background: linear-gradient(135deg, #0f172a, #1d4ed8);
+        color: #facc15 !important;
+        min-height: 100vh;
+        margin: 0;
+        padding: 0;
+    }
+}
+
+@media screen and (min-width: 769px) {
+    body {
     display: grid;
     grid-template-areas:
         "navbar navbar"
@@ -38,17 +61,21 @@ body {
     background: linear-gradient(135deg, #0f172a, #1d4ed8);
     color: #facc15 !important;
     min-height: 100vh;
+    }
 }
+
 
 .map-container {
     position: relative;
     width: 100%;
+    max-width: 100%;
 }
 
-.map-container img {
+.map img {
     width: 100%;
     height: auto;   
     display: block;
+    max-width: 100%;
 }
 
 .map-container button {
@@ -59,4 +86,5 @@ body {
 .map-container li {
     list-style-type: none;
 }
+
 
